objects/Currency_Values_For_Conversion__c.object
<CustomObject>
    <fields>
        <fullName>AUD__c</fullName>
        <label>AUD</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CAD__c</fullName>
        <label>CAD</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USD__c</fullName>
        <label>USD</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mule_opty_gateway_integration_user__c</fullName>
        <label>mule opty gateway integration user</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>These are the currency values for currency conversion for USD, AUS and CAD and Mule opty gateway user information. If Sales config team is updating currency conversion values under Company profile team should change these values as well.</description>
    <label>Currency Values For Conversion</label>
</CustomObject>